--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "deploy": "gh-pages -d dist",
     "build": "vite build --base=/vanilla-js-ui",
-    "preview": "vite preview"
+    "build-and-deploy": "npm run build && npm run deploy",
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "husky": "^8.0.0"
   }
 }
