--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "vite": "^4.0.0",
-    "husky": "^8.0.0"
+    "vite": "^4.0.0"
   }
 }
